Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-304

BasicConfigurator::configure results in writer not set warning

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.10.0
    • 0.11.0
    • Appender
    • None

    Description

      ConsoleAppender::ConsoleAppender(LayoutPtr&) does not call ConsoleAppender::activateOptions() and does not result in an immediately usable ConsoleAppender as it should.

      Attachments

        Activity

          People

            carnold@apache.org Curt Arnold
            carnold@apache.org Curt Arnold
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: