LOGCXX-304: BasicConfigurator::configure results in writer not set warning